force-app/main/default/objects/Contact/fields/AcknowledgmentOfFinalCoreVestLoanProceed__c.field-meta.xml
<CustomField>
    <fullName>AcknowledgmentOfFinalCoreVestLoanProceed__c</fullName>
    <description>AcknowledgmentOfFinalCoreVestLoanProceeds:
I understand and acknowledge that final loan proceeeds are contingent on underwriting findings and applicable unterest rates at the time of closing.</description>
    <inlineHelpText>AcknowledgmentOfFinalCoreVestLoanProceeds:
I understand and acknowledge that final loan proceeeds are contingent on underwriting findings and applicable unterest rates at the time of closing.</inlineHelpText>
    <label>AcknowledgmentOfFinalCoreVestLoanProceed</label>
    <length>3</length>
    <type>Text</type>
</CustomField>