force-app/main/default/objects/Contact/fields/Address_SBAC__c.field-meta.xml
<CustomField>
    <fullName>Address_SBAC__c</fullName>
    <description>SBAC = Sponsor / Borrower Attorney Contact</description>
    <label>Address SBAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>