force-app/main/default/objects/Contact/fields/Address_SBIABC__c.field-meta.xml
<CustomField>
    <fullName>Address_SBIABC__c</fullName>
    <description>SBIABC = Sponsor/Borrower Insurance Agent/Broker Contact</description>
    <label>Address SBIABC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>