force-app/main/default/objects/Contact/fields/Alchemy_Portal_Id__c.field-meta.xml
<CustomField>
    <fullName>Alchemy_Portal_Id__c</fullName>
    <externalId>true</externalId>
    <label>Alchemy Portal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>