force-app/main/default/objects/Contact/fields/API_1_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>API_1_Mobile_Phone__c</fullName>
    <label>Mobile Phone1</label>
    <type>Phone</type>
</CustomField>