force-app/main/default/objects/Contact/fields/API_1_Name__c.field-meta.xml
<CustomField>
    <fullName>API_1_Name__c</fullName>
    <label>Name1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>