force-app/main/default/objects/Contact/fields/API_2_Address__c.field-meta.xml
<CustomField>
    <fullName>API_2_Address__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>