force-app/main/default/objects/Contact/fields/API_2_City_State_ZIP_Code__c.field-meta.xml
<CustomField>
    <fullName>API_2_City_State_ZIP_Code__c</fullName>
    <label>City, State ZIP Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>