force-app/main/default/objects/Contact/fields/API_2_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>API_2_Email_Address__c</fullName>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>