force-app/main/default/objects/Contact/fields/API_2_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>API_2_Mobile_Phone__c</fullName>
    <label>Mobile Phone2</label>
    <type>Phone</type>
</CustomField>