force-app/main/default/objects/Contact/fields/API_2_Name__c.field-meta.xml
<CustomField>
    <fullName>API_2_Name__c</fullName>
    <label>Name2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>