force-app/main/default/objects/Contact/fields/API_2_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>API_2_Work_Phone__c</fullName>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>