force-app/main/default/objects/Contact/fields/API_3_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>API_3_Mobile_Phone__c</fullName>
    <label>Mobile Phone3</label>
    <type>Phone</type>
</CustomField>