force-app/main/default/objects/Contact/fields/API_3_Name__c.field-meta.xml
<CustomField>
    <fullName>API_3_Name__c</fullName>
    <description>API = Additional Principal Information</description>
    <label>Name3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>