force-app/main/default/objects/Contact/fields/Are_You_A_Foreign_National__c.field-meta.xml
<CustomField>
    <fullName>Are_You_A_Foreign_National__c</fullName>
    <description>Questionnaire page</description>
    <label>Are You A Foreign National</label>
    <length>3</length>
    <type>Text</type>
</CustomField>