force-app/main/default/objects/Contact/fields/Are_You_A_Perm_Resident_Alien__c.field-meta.xml
<CustomField>
    <fullName>Are_You_A_Perm_Resident_Alien__c</fullName>
    <description>Questionnaire page</description>
    <label>Are You A Perm Resident Alien</label>
    <length>3</length>
    <type>Text</type>
</CustomField>