force-app/main/default/objects/Contact/fields/Are_You_Currently_A_Defendant_Lawsuit__c.field-meta.xml
<CustomField>
    <fullName>Are_You_Currently_A_Defendant_Lawsuit__c</fullName>
    <description>Questionnaire page</description>
    <inlineHelpText>Are you currently a defendant in a lawsuit? If yes, please provide a separate signed written
explanation.</inlineHelpText>
    <label>Are You Currently A Defendant Lawsuit</label>
    <length>3</length>
    <type>Text</type>
</CustomField>