force-app/main/default/objects/Contact/fields/Are_You_Currently_Pending_Existing_Prop__c.field-meta.xml
<CustomField>
    <fullName>Are_You_Currently_Pending_Existing_Prop__c</fullName>
    <description>Questionnaire page</description>
    <inlineHelpText>Are there currently any pending/existing litigation involving properties in your portfolio? If yes, please
provide a separate signed written explanation.</inlineHelpText>
    <label>Are You Currently Pending Existing Prop</label>
    <length>3</length>
    <type>Text</type>
</CustomField>