force-app/main/default/objects/Contact/fields/Are_You_Delinquent_Default_Fed_Debt__c.field-meta.xml
<CustomField>
    <fullName>Are_You_Delinquent_Default_Fed_Debt__c</fullName>
    <description>Questionnaire page</description>
    <inlineHelpText>Are you presently delinquent or in default on any Federal debt or any other loan, mortgage, financial
obligation, bond or loan guarantee? If yes, please provide a separate signed written explanation.</inlineHelpText>
    <label>Are You Delinquent Default Fed Debt</label>
    <length>3</length>
    <type>Text</type>
</CustomField>