force-app/main/default/objects/Contact/fields/AreYouAUSCitizen_Quest__c.field-meta.xml
<CustomField>
    <fullName>AreYouAUSCitizen_Quest__c</fullName>
    <description>Questionnaire page</description>
    <label>Are You A U.S. Citizen</label>
    <length>3</length>
    <type>Text</type>
</CustomField>