force-app/main/default/objects/Contact/fields/Asian__c.field-meta.xml
<CustomField>
    <fullName>Asian__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asian</label>
    <type>Checkbox</type>
</CustomField>