force-app/main/default/objects/Contact/fields/Attorney_Name__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Name__c</fullName>
    <label>Attorney Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>