force-app/main/default/objects/Contact/fields/Attorney_Name_SBAC__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Name_SBAC__c</fullName>
    <description>SBAC = Sponsor / Borrower Attorney Contact</description>
    <label>Attorney Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>