force-app/main/default/objects/Contact/fields/Birthdate_Formula__c.field-meta.xml
<CustomField>
    <fullName>Birthdate_Formula__c</fullName>
    <formula>Text(Birthdate)</formula>
    <inlineHelpText>Value from the label field: Birthdate</inlineHelpText>
    <label>Birthdate formula</label>
    <type>Text</type>
</CustomField>