force-app/main/default/objects/Contact/fields/Black_or_African_American__c.field-meta.xml
<CustomField>
    <fullName>Black_or_African_American__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Black or African American</label>
    <type>Checkbox</type>
</CustomField>