force-app/main/default/objects/Contact/fields/Borrowed_on_Bridge_Loans__c.field-meta.xml
<CustomField>
    <fullName>Borrowed_on_Bridge_Loans__c</fullName>
    <description>Total amount borrowed through Bridge and Single Asset Bridge Loans</description>
    <label>Borrowed on Bridge Loans</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>