force-app/main/default/objects/Contact/fields/City_BCI__c.field-meta.xml
<CustomField>
    <fullName>City_BCI__c</fullName>
    <description>BCI = Business Entity Information</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>