force-app/main/default/objects/Contact/fields/City_State_Zip_Code_SBAC__c.field-meta.xml
<CustomField>
    <fullName>City_State_Zip_Code_SBAC__c</fullName>
    <description>SBAC = Sponsor / Borrower Attorney Contact</description>
    <label>City, State Zip Code SBAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>