force-app/main/default/objects/Contact/fields/City_State_ZIP_Code_SBIABC__c.field-meta.xml
<CustomField>
    <fullName>City_State_ZIP_Code_SBIABC__c</fullName>
    <description>SBIABC = Sponsor/Borrower Insurance Agent/Broker Contact</description>
    <label>City, State ZIP Code SBIABC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>