force-app/main/default/objects/Contact/fields/CityPD__c.field-meta.xml
<CustomField>
    <fullName>CityPD__c</fullName>
    <description>PD = Property Details</description>
    <label>City PD</label>
    <length>65</length>
    <type>Text</type>
</CustomField>