force-app/main/default/objects/Contact/fields/CityState_of_Entity_Formation__c.field-meta.xml
<CustomField>
    <fullName>CityState_of_Entity_Formation__c</fullName>
    <label>City/State of Entity Formation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>