force-app/main/default/objects/Contact/fields/Clear_Result__c.field-meta.xml
<CustomField>
    <fullName>Clear_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clear Result</label>
    <referenceTo>Clear_Result__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>