force-app/main/default/objects/Contact/fields/Company_Name_BCI__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_BCI__c</fullName>
    <description>BCI = Business Entity Information</description>
    <label>Company Name BCI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>