force-app/main/default/objects/Contact/fields/Corporation__c.field-meta.xml
<CustomField>
    <fullName>Corporation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corporation</label>
    <type>Checkbox</type>
</CustomField>