force-app/main/default/objects/Contact/fields/Country_Name_Quest__c.field-meta.xml
<CustomField>
    <fullName>Country_Name_Quest__c</fullName>
    <description>Are you a foreign national? If yes please provide country of citizenship and residence</description>
    <label>Country Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>