force-app/main/default/objects/Contact/fields/Credit_Score_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score_Date__c</fullName>
    <description>Date the last time Credit was ran</description>
    <inlineHelpText>Date the last time Credit was ran</inlineHelpText>
    <label>Credit Score Date</label>
    <type>Date</type>
</CustomField>