force-app/main/default/objects/Contact/fields/Cuban__c.field-meta.xml
<CustomField>
    <fullName>Cuban__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cuban</label>
    <type>Checkbox</type>
</CustomField>