force-app/main/default/objects/Contact/fields/CurrentPayoffAmount__c.field-meta.xml
<CustomField>
    <fullName>CurrentPayoffAmount__c</fullName>
    <label>Current Payoff Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>