force-app/main/default/objects/Contact/fields/DateofBirth__c.field-meta.xml
<CustomField>
    <fullName>DateofBirth__c</fullName>
    <description>Field located in DocuSign templates. If field is pre-populated and sent through DocuSign, the receiver can update the value and will save in Salesforce.</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>