force-app/main/default/objects/Contact/fields/Days_Aged__c.field-meta.xml
<CustomField>
    <fullName>Days_Aged__c</fullName>
    <formula>TODAY () - Inbound_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Aged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>