force-app/main/default/objects/Contact/fields/Deliquency_History__c.field-meta.xml
<CustomField>
    <fullName>Deliquency_History__c</fullName>
    <label>Deliquency History</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Occurrence</fullName>
            </value>
            <value>
                <fullName>Episodic</fullName>
            </value>
            <value>
                <fullName>Severe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>