force-app/main/default/objects/Contact/fields/Desired_Loan_Amount_LR__c.field-meta.xml
<CustomField>
    <fullName>Desired_Loan_Amount_LR__c</fullName>
    <description>LR = Loan Request</description>
    <label>Desired Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>