force-app/main/default/objects/Contact/fields/DNE_Updated_by_Trigger__c.field-meta.xml
<CustomField>
    <fullName>DNE_Updated_by_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not lend has checked the Do not Email field and can undo the change.</description>
    <label>DNE Updated by Trigger</label>
    <type>Checkbox</type>
</CustomField>