force-app/main/default/objects/Contact/fields/Do_Not_Lend_from_Account__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Lend_from_Account__c</fullName>
    <formula>Account.Do_Not_Lend__c = TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This comes from the parent Account, please flag as &quot;Do Not Lend&quot; on the Account level</inlineHelpText>
    <label>Do Not Lend (from Account)</label>
    <type>Checkbox</type>
</CustomField>