force-app/main/default/objects/Contact/fields/Do_you_intend_to_use_loan_purchase_prop__c.field-meta.xml
<CustomField>
    <fullName>Do_you_intend_to_use_loan_purchase_prop__c</fullName>
    <description>Do you intend to use the loan to purchase properties to: Rent or Fix and Flip or Both</description>
    <inlineHelpText>Do you intend to use the loan to purchase properties to: Rent or Fix and Flip or Both</inlineHelpText>
    <label>Do you intend to use  loan purchase prop</label>
    <length>15</length>
    <type>Text</type>
</CustomField>