force-app/main/default/objects/Contact/fields/Do_you_plan_to_rehab_property__c.field-meta.xml
<CustomField>
    <fullName>Do_you_plan_to_rehab_property__c</fullName>
    <label>Do you plan to rehab property?</label>
    <length>3</length>
    <type>Text</type>
</CustomField>