force-app/main/default/objects/Contact/fields/DoYouCurrentPendingLitig_Quest__c.field-meta.xml
<CustomField>
    <fullName>DoYouCurrentPendingLitig_Quest__c</fullName>
    <description>Questionnaire page</description>
    <inlineHelpText>Do you currently have any pending litigation against you? If yes, please provide a separate signed
written explanation.</inlineHelpText>
    <label>Do You Currently Have Pending Litigation</label>
    <length>3</length>
    <type>Text</type>
</CustomField>