force-app/main/default/objects/Contact/fields/DoYouCurrJudgeAgainst_Quest__c.field-meta.xml
<CustomField>
    <fullName>DoYouCurrJudgeAgainst_Quest__c</fullName>
    <description>Questionnaire page</description>
    <inlineHelpText>Do you currently have any outstanding judgments against you? If yes, please provide a separate
signed written explanation.</inlineHelpText>
    <label>Do You Have Judgements Against You</label>
    <length>3</length>
    <type>Text</type>
</CustomField>