force-app/main/default/objects/Contact/fields/eContacts__Contact_Send_to_Pardot__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Contact_Send_to_Pardot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A Pardot checkbox to be used by Visione Scan</description>
    <label>Send to Pardot</label>
    <type>Checkbox</type>
</CustomField>