force-app/main/default/objects/Contact/fields/Email_Address_SBAC__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_SBAC__c</fullName>
    <label>Email Address SBAC</label>
    <type>Email</type>
</CustomField>