force-app/main/default/objects/Contact/fields/Email_Address_SBIABC__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_SBIABC__c</fullName>
    <description>SBIABC = Sponsor/Borrower Insurance Agent/Broker Contact</description>
    <label>Email Address SBIABC</label>
    <type>Email</type>
</CustomField>