force-app/main/default/objects/Contact/fields/Email_BCI__c.field-meta.xml
<CustomField>
    <fullName>Email_BCI__c</fullName>
    <description>BCI = Business Entity Information</description>
    <label>Email - BCI</label>
    <type>Email</type>
</CustomField>