force-app/main/default/objects/Contact/fields/Est_Payoff_Amt_by_Lender_LR__c.field-meta.xml
<CustomField>
    <fullName>Est_Payoff_Amt_by_Lender_LR__c</fullName>
    <description>LR = Loan Request</description>
    <label>Est Payoff Amt by Lender</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>