force-app/main/default/objects/Contact/fields/Est_PrePayment_Penalties_LR__c.field-meta.xml
<CustomField>
    <fullName>Est_PrePayment_Penalties_LR__c</fullName>
    <description>LR = Loan Request</description>
    <label>Est PrePayment Penalties</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>