force-app/main/default/objects/Contact/fields/Estimated_Rehab_Cost_PD__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Rehab_Cost_PD__c</fullName>
    <description>PD = Property Details</description>
    <label>Estimated Rehab Cost</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>