force-app/main/default/objects/Contact/fields/EstimatedAsRepairedValuePD__c.field-meta.xml
<CustomField>
    <fullName>EstimatedAsRepairedValuePD__c</fullName>
    <description>PD = Property Details</description>
    <label>Estimated As Repaired Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>