force-app/main/default/objects/Contact/fields/EstimatedClosingDateContract_PD__c.field-meta.xml
<CustomField>
    <fullName>EstimatedClosingDateContract_PD__c</fullName>
    <description>PD = Property Details</description>
    <label>EstimatedClosingDate(Contract)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>