force-app/main/default/objects/Contact/fields/Ethnicity_I_do_not_wish_to_provide_Info__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity_I_do_not_wish_to_provide_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ethnicity-I do not wish to provide Info</label>
    <type>Checkbox</type>
</CustomField>