force-app/main/default/objects/Contact/fields/Experian__c.field-meta.xml
<CustomField>
    <fullName>Experian__c</fullName>
    <label>Experian</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>