force-app/main/default/objects/Contact/fields/ExplainReasonForLoss_SPB__c.field-meta.xml
<CustomField>
    <fullName>ExplainReasonForLoss_SPB__c</fullName>
    <label>ExplainReasonForLoss</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>