force-app/main/default/objects/Contact/fields/Fax_SBAC__c.field-meta.xml
<CustomField>
    <fullName>Fax_SBAC__c</fullName>
    <description>SBAC = Sponsor / Borrower Attorney Contact</description>
    <label>Fax SBAC</label>
    <type>Phone</type>
</CustomField>