force-app/main/default/objects/Contact/fields/Fax_SBIABC__c.field-meta.xml
<CustomField>
    <fullName>Fax_SBIABC__c</fullName>
    <description>SBIABC = Sponsor/Borrower Insurance Agent/Broker Contact</description>
    <label>Fax SBIABC</label>
    <length>65</length>
    <type>Text</type>
</CustomField>