force-app/main/default/objects/Contact/fields/Fax_Sponsor_Borrower_Attorney_Contact__c.field-meta.xml
<CustomField>
    <fullName>Fax_Sponsor_Borrower_Attorney_Contact__c</fullName>
    <label>Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>