force-app/main/default/objects/Contact/fields/Fico__c.field-meta.xml
<CustomField>
    <fullName>Fico__c</fullName>
    <label>FICO</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>