force-app/main/default/objects/Contact/fields/Foreign_National__c.field-meta.xml
<CustomField>
    <fullName>Foreign_National__c</fullName>
    <description>Identifies if the contact is a foreign national. A foreign national is any person who is not a national of the United States. A national of the United States is an individual that is a U.S. citizen, Lawful permanent resident (green card holder), or “Protected Person” i.e. political asylum holder. Any individual who is present in the U.S. on a temporary immigration visa is considered a Foreign National.</description>
    <inlineHelpText>Please indicate whether this contact is a foreign national. A foreign national is any person who is not a national of the United States. A national of the United States is an individual that is a U.S. citizen, lawful permanent resident (green card holder), or “Protected Person” i.e. political asylum holder. Any individual who is present in the U.S. on a temporary immigration visa is considered a foreign national.</inlineHelpText>
    <label>Foreign National</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>