force-app/main/default/objects/Contact/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>HYPERLINK(&quot;https://cvest.lightning.force.com/one/one.app#/sObject/&quot; &amp;Id &amp; &quot;/view&quot;, FirstName &amp; &quot; &quot; &amp; LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>